@@ -7,3 +7,8 @@ test_input/test39.py:10: "s" is not first method argument
 test_input/test39.py:11: No doc string for class X2
 test_input/test39.py:14: No doc string for function a
 test_input/test39.py:19: No doc string for function a
+test_input/test39.py:29: No doc string for function x
+test_input/test39.py:31: No doc string for function y
+test_input/test39.py:33: No doc string for function z
+test_input/test39.py:33: Parameter (jjj) not used
+test_input/test39.py:34: Local variable (j) not used
